# clip-board

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Clip Board.spec  README.md  build.bat  build_macos.sh  main.py  pyproject.toml  run.bat
clip_board/: __init__.py  app.py  canvas.py  constants.py  main_window.py  media.py  models.py  panels.py  project_store.py  scene_items.py  theme.py
scripts/: smoke_ui.py
tests/: test_models.py  test_project_store.py
