[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-board-workbench"
version = "0.1.0"
description = "A visual board and lightweight animation clipping workbench."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "PySide6>=6.7,<6.10",
]

[project.scripts]
clip-board = "clip_board.app:main"

[tool.setuptools.packages.find]
include = ["clip_board*"]
